Fix screen number overflow

--- a/src/sass/modules/calculator/_screen.scss
+++ b/src/sass/modules/calculator/_screen.scss
@@ -20,6 +20,7 @@
   &__number {
     color: var(--clr-text-primary);
     font-size: f.rem(40);
+    overflow: hidden;
 
     @include b.breakpoint(large) {
       font-size: f.rem(56);
